codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__renders_snapshot_for_remote_git_subdirectory.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: "terminal.backend().to_string().lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---
> 当前目录：/srv/remote/project/nested

  注意：当前目录是 Git 项目的子目录。
  信任设置将作用于仓库根目录：/srv/remote/project

  是否信任此目录中的内容？
  处理不受信任的内容会增加提示词注入风险。
  信任后将加载本地配置、Hook 和命令执行策略。

› 1. 是，继续
  2. 否，退出

  按下 Enter 继续
