codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__renders_snapshot_for_trust_error.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: "terminal.backend().to_string().lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---
> 当前目录：/workspace/project

  是否信任此目录中的内容？
  处理不受信任的内容会增加提示词注入风险。
  信任后将加载本地配置、Hook 和命令执行策略。

› 1. 是，继续
  2. 否，退出

  Failed to set trust for /workspace/project: config/batchWrite failed
  in TUI: Invalid configuration: features.fast_mode=true is not
  supported; allowed set [fast_mode=false]

  按下 Enter 继续
